<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="228px">
    <TextView
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableTop="@drawable/bg_login_logo"
        android:text="登陆奇易网，发现更多惊喜"
        android:textSize="24px"
        android:drawablePadding="20px"
        android:textColor="#f8f8f8"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="600px"
        android:layout_marginTop="50px"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:textColor="@color/white"
            android:hint="@string/enter_user_name"
            android:text="一二三"
            android:textSize="26px"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="600px"
        android:layout_marginTop="20px"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:textSize="26px"
            android:textColor="@color/white"
            android:hint="@string/enter_password"
            android:text="123456"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="600px"
        android:gravity="right"
        android:paddingBottom="10px"
        android:paddingTop="10px"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="12px"
        android:text="忘记密码"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="600px"
        android:layout_height="80px"
        android:layout_marginTop="20px"
        android:background="@drawable/btn_login"
        android:text="@string/_login"
        android:textSize="30px"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/regist_font_click"
        android:paddingBottom="20px"
        android:textSize="30px"
        android:paddingTop="20px"
        android:text="@string/_register" />

</com.zhy.autolayout.AutoLinearLayout>

